Add ArmorEffects and Display on Items Lore (#6)
* figured out how to serialize a compact potioneffect class into PDC

not working state

* Added the rest of armor effects, fixed a double click bug, removed debug messages

Not fully tested state

* Added the itemInfoManager to handle Lore Edits and Information View in items lore, added PFs and ArmorEffects in Lore

* Rework versions